deployments/go-testing/deployment.yml
---
### TEMPLATE FOR A SERVICE AND DEPLOYMENT ON KUBERNETES just substitute the next keywords with your own values
### go-cloud-k8s-thing     : the name of your application or container image
### v0.0.4  : the version of the app image to deploy
### ghcr.io/lao-tseu-is-alive  : the prefix to your images in your container registry
apiVersion: v1
kind: Namespace
metadata:
  name: go-testing
  labels:
    env: test
    app: goeland
    # https://kubernetes.io/docs/concepts/security/pod-security-admission/
    # The per-mode level label indicates which policy level to apply for the mode.
    # MODE must be one of `enforce`, `audit`, or `warn`.
    # LEVEL must be one of `privileged`, `baseline`, or `restricted`.
    # pod-security.kubernetes.io/<MODE>: <LEVEL>
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
